# arkon-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
arkon/: __init__.py
tests/: test_arkon.py
