[tool.poetry]
name = "arkon"
version = "0.0.1.dev0"
description = "Message-driven abstraction layer for various interaction patterns"
authors = ["Nick Groszewski <groszewn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arkon-schema = "^0.0.1-alpha.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
